<resources>
    <string name="app_name" translatable="false">NewDesignSupTry</string>

    <string name="hello_world" translatable="false">Hello Design!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="nav_header_info" translatable="false">Design NavigationView Header</string>
    <string name="nav_item_home" translatable="false">Home</string>
    <string name="nav_item_scroll" translatable="false">Scroll</string>
    <!--<string name="nv_item_3">Third Nav. item</string>-->
    <string name="nav_menu_item" translatable="false">Nav. SubMenu title</string>
    <string name="sub_nav_item1" translatable="false">First Nav. SubMenu item</string>
    <string name="sub_nav_item2" translatable="false">Second Nav. SubMenu item</string>
    <string name="nav_item_run" translatable="false">Nav. item-Run add</string>
    <string name="nav_sub_item_run" translatable="false">Nav. SubMenu item-Run add</string>
    <string name="nav_sub_menu_title_run" translatable="false">Nav. SubMenu-Run add</string>
    <string name="drawer_open" translatable="false">Open drawer</string>
    <string name="drawer_close" translatable="false">Close drawer</string>
    <string name="title_activity_scroll_bar" translatable="false">ScrollBarActivity</string>

</resources>
