<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_1"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_item_2"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_item_scroll" />
        <item
            android:id="@+id/nav_item_with_sub"
            android:title="@string/nav_menu_item">
            <menu>
                <item
                    android:id="@+id/sub_nav_item1"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/sub_nav_item1" />
                <item
                    android:id="@+id/sub_nav_item12"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/sub_nav_item2" />

            </menu>
        </item>
    </group>

</menu>